made correction of positioning on tablet

--- a/src/Components/AboutUs/AboutUs.module.css
+++ b/src/Components/AboutUs/AboutUs.module.css
@@ -3,7 +3,7 @@
 
   padding-right: 20px;
   padding-left: 20px;
-  padding-top: 150px;
+  /* padding-top: 150px; */
   padding-bottom: 16px;
 
   color: var(--mainColor);
@@ -52,11 +52,9 @@
 
 @media screen and (min-width: 768px) {
   .section {
-    position: absolute;
-    top: 60%;
-
     display: flex;
     padding-right: 36px;
+    padding-top: 28px;
   }
 
   .section::before {
@@ -68,7 +66,6 @@
   }
 
   .textCon {
-    padding-top: 28px;
     text-align: left;
   }
 
@@ -79,12 +76,10 @@
 
 @media screen and (min-width: 1280px) {
   .section {
-position: static;
-padding: 0;
-padding-top: 56px;
-    /* position: absolute;
-    bottom: 0;
-    transform: translateY(130%); */
+    position: static;
+    padding: 0;
+    margin-top: 156px;
+
     justify-content: center;
   }
 
