--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -18,6 +18,7 @@
 @media screen and (min-width: 768px) {
   .con {
     margin-top: 380px;
+    margin-bottom: 32px;
   }
 }
 
