--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -49,13 +49,11 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    /* height: 822px; */
     padding-top: 0;
     padding-left: 33px;
 
     /* background-image: url(../../Utils/images/bg_tablet.png); */
 
-    background-repeat: no-repeat;
   }
 
   .iconsCon {
@@ -70,6 +68,10 @@
     position: absolute;
     top: 0;
     left: 256px;
+  }
+
+  .text{
+    margin-bottom: 28px;
   }
 
   .textCon {
