--- a/src/Components/SocIcons/SocIcons.module.css
+++ b/src/Components/SocIcons/SocIcons.module.css
@@ -5,9 +5,3 @@
 .icon:not(:last-child){
     margin-right: 16px;
 }
-
-@media screen and (min-width:768px){
-    .socIconsCon{
-        margin-top: 32px;
-    }
-}
